Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -3,6 +3,13 @@ trigger: none     # run pipeline manually
 pool: linux
 
 steps: 
+- task: Bash@3
+  displayName: 'Install unzip'
+  inputs:
+    targetType: 'inline'
+    script: |
+      sudo apt-get update -y
+      sudo apt-get install -y unzip
 - task: TerraformInstaller@1
   displayName: terraform installer
   inputs:
